<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tiffany_blue"
    android:id="@+id/ProfileLayout">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20dp"
        android:elevation="20dp"
        android:layout_margin="6dp"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageUploaded"
                android:layout_width="188dp"
                android:layout_height="202dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.366"
                app:srcCompat="@drawable/box" />


            <Button
                android:id="@+id/ChatProfileButton"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:background="@drawable/message"
                android:text=""
                android:textColor="@color/light_cyan"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/ItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="32dp"
                android:text="@string/item_item"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageUploaded"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ItemTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/item_date_created"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ItemName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.159" />

            <TextView
                android:id="@+id/ItemVenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="144dp"
                android:text="@string/item_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ItemTime"
                app:layout_constraintTop_toBottomOf="@+id/ItemTime" />

            <TextView
                android:id="@+id/ItemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/item_description"
                app:layout_constraintStart_toStartOf="@+id/ItemVenue"
                app:layout_constraintTop_toBottomOf="@+id/ItemVenue" />

            <Button
                android:id="@+id/ItemStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="ffffff"
                android:text="@string/item_status"
                app:layout_constraintStart_toStartOf="@+id/ItemDescription"
                app:layout_constraintTop_toBottomOf="@+id/ItemDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>